--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.11.1",
     "next": "9.5.3",
+    "next-images": "^1.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
