--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
+    "react-slick": "^0.27.11",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0"
   }
 }
